--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 01_log_analyzer/01_advanced_basics
 env/
 01_log_analyzer/lastupdate
+01_log_analyzer/output.json
 01_log_analyzer/testing.py
 01_log_analyzer/reports/
 */__pycache__
+*.gz
+feedback.txt
